--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,14 @@
     "require": {
         "cwp/cwp-recipe-basic": "1.9.x-dev",
         "cwp/cwp-recipe-blog": "1.9.x-dev",
-        "cwp/starter-theme": "1.1.x-dev"
+        "cwp/starter-theme": "1.1.x-dev",
+        "bringyourownideas/silverstripe-composer-update-checker": "dev-pulls/1.0/thats-not-my-home-either as 1.0.x-dev"
+    },
+    "repositories": {
+        "bringyourownideas/silverstripe-composer-update-checker": {
+            "type": "git",
+            "url": "https://github.com/creative-commoners/silverstripe-composer-update-checker.git"
+        }
     },
     "require-dev": {
         "cwp/cwp-recipe-basic-dev": "^1.1@stable"
