Update composer json to use 4.3 security repos

--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,27 @@
     "require": {
         "php": ">=5.6.0",
         "silverstripe/recipe-plugin": "^1",
-        "silverstripe/recipe-cms": "^1",
+        "silverstripe/recipe-cms": "4.3.x-dev",
         "silverstripe-themes/simple": "~3.2.0",
+        "silverstripe/framework": "4.3.x-dev",
+        "silverstripe/graphql": "3.0.x-dev",
+        "silverstripe/admin": "1.3.x-dev",
         "silverstripe/dynamodb": "4.0.x-dev",
         "silverstripe/crontask": "2.x-dev"
+    },
+    "repositories": {
+        "silverstripe/framework": {
+            "type": "vcs",
+            "url": "git@github.com:/silverstripe-security/silverstripe-framework"
+        },
+        "silverstripe/admin": {
+            "type": "vcs",
+            "url": "git@github.com:/silverstripe-security/silverstripe-admin"
+        },
+        "silverstripe/graphql": {
+            "type": "vcs",
+            "url": "git@github.com:/silverstripe-security/silverstripe-graphql"
+        }
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
@@ -25,6 +42,11 @@
         },
         "project-files-installed": [
             ".htaccess",
+            "app/.htaccess",
+            "app/_config.php",
+            "app/_config/mysite.yml",
+            "app/src/Page.php",
+            "app/src/PageController.php",
             "index.php",
             "install-frameworkmissing.html",
             "install.php",
@@ -33,6 +55,13 @@
             "mysite/_config/mysite.yml",
             "mysite/code/Page.php",
             "mysite/code/PageController.php",
+            "web.config"
+        ],
+        "public-files-installed": [
+            ".htaccess",
+            "index.php",
+            "install-frameworkmissing.html",
+            "install.php",
             "web.config"
         ]
     },
