--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,13 @@
     "description": "The SilverStripe Framework Installer",
     "require": {
         "php": ">=5.6.0",
-        "silverstripe/recipe-plugin": "^1",
+        "silverstripe/recipe-plugin": "^1.2",
         "silverstripe/recipe-cms": "4.3.x-dev",
         "silverstripe-themes/simple": "~3.2.0",
+        "silverstripe/frameworktest": "dev-master",
         "silverstripe/framework": "4.3.x-dev",
         "silverstripe/graphql": "3.0.x-dev",
-        "silverstripe/admin": "1.3.x-dev",
-        "silverstripe/dynamodb": "4.0.x-dev",
-        "silverstripe/crontask": "2.x-dev"
+        "silverstripe/admin": "1.3.x-dev"
     },
     "repositories": {
         "silverstripe/framework": {
@@ -32,30 +31,19 @@
     },
     "extra": {
         "project-files": [
+            "app/_config/*",
+            ".env.example"
+        ],
+        "public-files": [
             "assets/*",
-            "mysite/_config/*",
-            ".env.example",
             "favicon.ico"
         ],
-        "branch-alias": {
-            "dev-master": "5.x-dev"
-        },
         "project-files-installed": [
-            ".htaccess",
             "app/.htaccess",
             "app/_config.php",
             "app/_config/mysite.yml",
             "app/src/Page.php",
-            "app/src/PageController.php",
-            "index.php",
-            "install-frameworkmissing.html",
-            "install.php",
-            "mysite/.htaccess",
-            "mysite/_config.php",
-            "mysite/_config/mysite.yml",
-            "mysite/code/Page.php",
-            "mysite/code/PageController.php",
-            "web.config"
+            "app/src/PageController.php"
         ],
         "public-files-installed": [
             ".htaccess",
