--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "silverstripe/recipe-content-blocks": "2.1.x-dev",
         "dnadesign/silverstripe-elemental-userforms": "3.0.x-dev",
         "silverstripe/textextraction": "3.0.x-dev",
-        "silverstripe/realme": "3.1.x-dev"
+        "silverstripe/realme": "3.1.x-dev",
+        "silverstripe/ckan-registry": "1.0.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
