Remove obsolete branch alias

--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,7 @@
     "config": {
         "process-timeout": 900
     },
-    "extra": {
-        "branch-alias": {
-            "1.x-dev": "1.9.x-dev"
-        }
-    },
+    "extra": [],
     "prefer-stable": true,
     "minimum-stability": "dev"
 }
