--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "BSD-3-Clause",
     "require": {
         "silverstripe/recipe-plugin": "^1",
-        "cwp/cwp-installer": "2.2.x-dev",
+        "cwp/cwp-installer": "2.3.x-dev",
         "cwp/agency-extensions": "2.1.x-dev",
         "cwp/watea-theme": "2.1.x-dev",
         "silverstripe/controllerpolicy": "2.1.x-dev",
@@ -17,7 +17,8 @@
         "dnadesign/silverstripe-elemental-userforms": "3.0.x-dev",
         "silverstripe/textextraction": "3.0.x-dev",
         "silverstripe/realme": "3.1.x-dev",
-        "silverstripe/ckan-registry": "1.0.x-dev"
+        "silverstripe/ckan-registry": "1.0.x-dev",
+        "silverstripe/mfa": "4.0.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
