--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -131,5 +131,6 @@
     <testsuite name="optional-authenticators">
         <directory>vendor/silverstripe/ldap/tests</directory>
         <directory>vendor/silverstripe/realme/tests</directory>
+        <directory>vendor/silverstripe/mfa/tests</directory>
     </testsuite>
 </phpunit>
