--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "silverstripe/textextraction": "3.0.x-dev",
         "silverstripe/realme": "3.1.x-dev",
         "silverstripe/ckan-registry": "1.0.x-dev",
-        "silverstripe/mfa": "4.0.x-dev"
+        "silverstripe/mfa": "4.0.x-dev",
+        "silverstripe/totp-authenticator": "1.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
