--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,7 @@
         "dnadesign/silverstripe-elemental-userforms": "3.0.x-dev",
         "silverstripe/textextraction": "3.0.x-dev",
         "silverstripe/realme": "3.1.x-dev",
-        "silverstripe/ckan-registry": "1.0.x-dev",
-        "silverstripe/mfa": "4.0.x-dev",
-        "silverstripe/totp-authenticator": "1.x-dev"
+        "silverstripe/ckan-registry": "1.0.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
@@ -27,6 +25,10 @@
         "silverstripe/frameworktest": "dev-master",
         "silverstripe/graphql-devtools": "1.x-dev",
         "silverstripe/recipe-testing": "1.x-dev"
+    },
+    "suggest": {
+        "silverstripe/mfa": "Add MFA authentication. Only available in PHP ^7.1.",
+        "silverstripe/totp-authenticator": "Add TOTP for the silverstripe/mfa module. Only available in PHP ^7.1."
     },
     "extra": {
         "project-files": [],
