--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "silverstripe/ckan-registry": "1.0.x-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
+        "silverstripe/recipe-testing": "^1",
         "mikey179/vfsstream": "^1.6"
     },
     "extra": {
