--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,12 @@
     "description": "CWP Project Template",
     "license": "BSD-3-Clause",
     "require": {
-        "cwp/cwp-recipe-basic": "1.9.x-dev",
-        "cwp/cwp-recipe-blog": "1.9.x-dev",
+        "cwp/cwp-recipe-basic": "1.10.x-dev",
+        "cwp/cwp-recipe-blog": "1.10.x-dev",
         "cwp/starter-theme": "1.1.x-dev"
     },
     "require-dev": {
-        "cwp/cwp-recipe-basic-dev": "^1.1@stable"
+        "cwp/cwp-recipe-basic-dev": "1.x-dev"
     },
     "suggest": {
         "silverstripe/textextraction": "Required for document text searching within CWP"
@@ -16,11 +16,7 @@
     "config": {
         "process-timeout": 900
     },
-    "extra": {
-        "branch-alias": {
-            "1.x-dev": "1.9.x-dev"
-        }
-    },
+    "extra": [],
     "prefer-stable": true,
     "minimum-stability": "dev"
 }
