--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,11 @@
     "require": {
         "php": ">=5.6.0",
         "silverstripe/recipe-plugin": "^1",
-        "silverstripe/recipe-cms": "^1",
+        "silverstripe/recipe-cms": "4.3.x-dev",
         "silverstripe-themes/simple": "~3.2.0",
         "silverstripe/dynamodb": "4.0.x-dev",
-        "silverstripe/crontask": "2.x-dev"
+        "silverstripe/crontask": "2.x-dev",
+        "silverstripe/vendor-plugin": "1.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
@@ -25,6 +26,11 @@
         },
         "project-files-installed": [
             ".htaccess",
+            "app/.htaccess",
+            "app/_config.php",
+            "app/_config/mysite.yml",
+            "app/src/Page.php",
+            "app/src/PageController.php",
             "index.php",
             "install-frameworkmissing.html",
             "install.php",
@@ -33,6 +39,13 @@
             "mysite/_config/mysite.yml",
             "mysite/code/Page.php",
             "mysite/code/PageController.php",
+            "web.config"
+        ],
+        "public-files-installed": [
+            ".htaccess",
+            "index.php",
+            "install-frameworkmissing.html",
+            "install.php",
             "web.config"
         ]
     },
