--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,8 @@
     "require": {
         "php": ">=5.6.0",
         "silverstripe/recipe-plugin": "^1",
-        "silverstripe/recipe-cms": "^1",
-        "silverstripe-themes/simple": "~3.2.0",
-        "silverstripe/dynamodb": "4.0.x-dev",
-        "silverstripe/crontask": "2.x-dev"
+        "silverstripe/dynamodb": "^4",
+        "cwp/cwp-recipe-kitchen-sink": "2.5.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
@@ -25,6 +23,21 @@
         },
         "project-files-installed": [
             ".htaccess",
+            "app/.htaccess",
+            "app/_config.php",
+            "app/_config/blog.yml",
+            "app/_config/contentblocks.yml",
+            "app/_config/cwpadmin.yml",
+            "app/_config/environmentcheck.yml",
+            "app/_config/mysite.yml",
+            "app/_config/security.yml",
+            "app/_config/theme.yml",
+            "app/_config/versionfeed.yml",
+            "app/src/BlocksPage.php",
+            "app/src/HomePage.php",
+            "app/src/HomePageController.php",
+            "app/src/Page.php",
+            "app/src/PageController.php",
             "index.php",
             "install-frameworkmissing.html",
             "install.php",
@@ -33,6 +46,11 @@
             "mysite/_config/mysite.yml",
             "mysite/code/Page.php",
             "mysite/code/PageController.php",
+            "web.config"
+        ],
+        "public-files-installed": [
+            ".htaccess",
+            "index.php",
             "web.config"
         ]
     },
