Properly set up themes

--- a/mysite/_config/theme.yml
+++ b/mysite/_config/theme.yml
@@ -1,7 +1,9 @@
 ---
-Name: mytheme
+Name: cwptheme
 ---
 SilverStripe\View\SSViewer:
   themes:
-    - 'simple'
+    - '$public'
+    - 'watea'
+    - 'starter'
     - '$default'
