Add explicit ext-mcrypt requirement

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "silverstripe/totp-authenticator": "4.0.x-dev",
         "silverstripe/webauthn-authenticator": "4.0.x-dev",
         "silverstripe/security-extensions": "4.0.x-dev",
-        "silverstripe/login-forms": "4.0.x-dev"
+        "silverstripe/login-forms": "4.0.x-dev",
+        "ext-mcrypt": "*"
     },
     "require-dev": {
         "silverstripe/frameworktest": "dev-master",
