--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "silverstripe-themes/simple": "~3.2.0",
         "silverstripe/admin": "dev-pulls/1/file-manager-icons as 1.x-dev",
         "silverstripe/asset-admin": "dev-pulls/1/file-manager-icons as 1.x-dev",
-        "silverstripe/assets": "dev-pulls/1/file-manager-icons as 1.x-dev"
+        "silverstripe/assets": "dev-pulls/1/file-manager-icons as 1.x-dev",
+        "silverstripe/userforms": "dev-pulls/5/file-manager-icons as 5.x-dev"
     },
     "repositories": [
         {
@@ -24,6 +25,10 @@
         {
             "type": "vcs",
             "url": "git@github.com:creative-commoners/silverstripe-assets.git"
+        },
+        {
+            "type": "vcs",
+            "url": "git@github.com:creative-commoners/silverstripe-userforms.git"
         }
     ],
     "require-dev": {
